--- a/index.html
+++ b/index.html
@@ -1020,11 +1020,11 @@
       </div>
     </footer>
     <script src="js/main.js"></script> 
-    <!-- <script src="js/arcodian.js"></script>
+   <script src="js/arcodian.js"></script>
     <script src="js/hover.js"></script>
-    <script src="js/magazine.js"></script>
+    <!-- <script src="js/magazine.js"></script>
     <script src="js/blog.js"></script>
     <script src="js/youtube.js"></script>
-    <script src="js/media.js"></script> -->
+    <script src="js/media.js"></script>   -->
   </body>
 </html>
