--- a/index.html
+++ b/index.html
@@ -389,17 +389,7 @@
         <p class="sub-title">한솔홈데코의 다양한 소식을 만나보세요.</p>
         <button class="prev img-btn">prev</button>
         <button class="next img-btn">next</button>
-        <div class="control">
-          <!-- <div class="con-btn">
-            <a href="#" class="start active">시작</a>
-            <a href="#" class="pause">멈춤</a>
-          </div> -->
-          <!-- <ul>
-            <li><a href="#" class="bar bar-lg data-index="1">프리미엄 벽면제</a></li>
-            <li><a href="#" class="bar bar-lg"data-index="2">바닥재</a></li>
-            <li><a href="#" class="bar bar-lg" data-index="3">바닥재</a></li>
-          </ul> -->
-        </div>
+        
         <div class="slide-box">
           <div class="slide-box-item" id="lastClone">
             <div class="box-left">
@@ -1022,8 +1012,8 @@
     <script src="js/main.js"></script> 
    <script src="js/arcodian.js"></script>
     <script src="js/hover.js"></script>
-    <!-- <script src="js/magazine.js"></script>
-    <script src="js/blog.js"></script>
+    <script src="js/magazine.js"></script>
+    <!-- <script src="js/blog.js"></script>
     <script src="js/youtube.js"></script>
     <script src="js/media.js"></script>   -->
   </body>
