--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
       </div>
       <div class="control blog-control-bar">
         <ul>
-          <li href="" class="bar bar-lg">프리미엄 벽면제</li>
+          <li href="" class="bar bar-lg active">프리미엄 벽면제</li>
           <li href="" class="bar bar-lg">프리미엄 벽면제</li>
           <li href="" class="bar bar-lg">프리미엄 벽면제</li>
         </ul>
@@ -1013,8 +1013,8 @@
    <script src="js/arcodian.js"></script>
     <script src="js/hover.js"></script>
     <script src="js/magazine.js"></script>
-    <!-- <script src="js/blog.js"></script>
-    <script src="js/youtube.js"></script>
-    <script src="js/media.js"></script>   -->
+    <script src="js/blog.js"></script>
+    <!-- <script src="js/youtube.js"></script>
+    <script src="js/media.js"></script>    -->
   </body>
 </html>
